updates python notebook for week 1 of Coursera capstone project course

--- a/Coursera_Capstone_Week1.ipynb
+++ b/Coursera_Capstone_Week1.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Coursera - Applied Data Science Capstone\n",
+    "\n",
+    "This jupyter notebook will be used to complete the capstone project for the final course in the Coursera IBM Data Science Professional Certificate - Applied Data Science capstone."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
