updates python notebook for week 1 of Coursera capstone project course

--- a/Coursera_Capstone_Week1.ipynb
+++ b/Coursera_Capstone_Week1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Coursera - Applied Data Science Capstone\n",
+    "### Applied Data Science Capstone Project\n",
     "\n",
     "This jupyter notebook will be used to complete the capstone project for the final course in the Coursera IBM Data Science Professional Certificate - Applied Data Science capstone."
    ]
